# A-Level-Coursework

./: .gitignore  Dockerfile  README.md  __init__.py  app.py  compose.yaml  config.py  example.env  feedback.md  forms.py  models.py  notes.md  pyproject.toml  requirements.txt  wsgi.py
.github/workflows/: docker-publish.yml
routes/: admin.py  auth.py  bookings.py  dashboard.py  rooms.py  support.py
src/meeting_room_manager/: __init__.py  config.py  forms.py
src/meeting_room_manager/routes/: admin.py  auth.py  bookings.py  dashboard.py  rooms.py  support.py
src/meeting_room_manager/templates/: base.html
src/meeting_room_manager/templates/admin/: dashboard.html  setup.html
src/meeting_room_manager/templates/auth/: 2fa.html  login.html
src/meeting_room_manager/templates/bookings/: list.html  new.html
src/meeting_room_manager/templates/dashboard/: main.html
src/meeting_room_manager/templates/mailjet/: 2fa.html  booking_confirmation.html  support_ticket.html  support_ticket_update.html
src/meeting_room_manager/templates/rooms/: detail.html  list.html
src/meeting_room_manager/templates/support/: form.html
src/meeting_room_manager/utils/: helpers.py
static/: style.css
templates/: base.html
templates/admin/: dashboard.html  setup.html
templates/auth/: 2fa.html  login.html
templates/bookings/: list.html  new.html
templates/dashboard/: admin.html
templates/mailjet/: 2fa.html  support_ticket.html
templates/rooms/: detail.html  list.html
templates/support/: form.html
utils/: helpers.py  mailjet.py  models.py  otp.py
