[project]
name = "meeting-room-manager"
version = "0.1.0"
description = "Meeting Room Booking System for CAA - Computer Science NEA"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "email-validator>=2.3.0",
    "flask>=3.1.2",
    "flask-mailjet>=0.3.7",
    "flask-migrate>=4.1.0",
    "flask-sqlalchemy>=3.1.1",
    "flask-wtf>=1.2.2",
    "pyotp>=2.9.0",
    "python-dotenv>=1.2.1",
]
